src/objects/Delivery_Scope__c.object
<CustomObject>
    <description>created as part of ta81 for sprint #3</description>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <formula>Vendor__r.Primary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Phone__c</fullName>
        <formula>Vendor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Scope</relationshipLabel>
        <relationshipName>Delivery_Scope</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Delivery Scope</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Delivery Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Scope</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>